Fix for bug 141035. Application must quit if it fails to load the .cfg file. r=sgehani, ccarlen, sr=alecf.